--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    //circular progress for glide
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
